--- a/index.html
+++ b/index.html
@@ -9,32 +9,32 @@
 	<body>
 		<header>
 			<nav class='navigation'>
-				<div class='nav_left'>
-					<a href='#' class='navigation__burger'></a>
-					<div class="divider_1"></div>
-					<a href='#' class='navigation__logo'></a>
-				</div>
-				<div class='nav_right'>
-					<a href="#" class='navigation__telephon'></a>
-					<a href="#" class='navigation__sms'></a>
-					<a href="#" class='navigation__person'></a>
-					<div class="divider"></div>
-					<a href="#" class='navigation__repair'></a>
-					<a href="#" class="navigation__chatstatus"></a>
-				</div>
+				<ul class='nav_left'>
+					<li class='navigation__burger'><a href='#'><img src="./image/icon.svg"></a></li>
+					<li class="divider_1"></li>
+					<li class='navigation__logo'><a href='#'><img src="./image/Group.svg"></a></li>
+				</ul>
+				<ul class='nav_right'>
+					<li class='navigation__telephon'><a href="#"><img src="./image/tel.svg"></a></li>
+					<li class='navigation__sms'><a href="#"><img src="./image/chat.svg"></a></li>
+					<li class='navigation__person'><a href="#"><img src="./image/person.svg"></a></li>
+					<li class="divider"></li>
+					<li class='navigation__repair'><a href="#"><img src="./image/repair.svg"></a></li>
+					<li class="navigation__chatstatus"><a href="#"><img src="./image/chatstatus.svg"></a></li>
+				</ul>
 			</nav>
 		</header>
 		<main>
 			<div class='title menu'>
 				<h1 class='title'>Услуги и сервисы</h1>
-				<div class='title__navigation'>
-				Оставить заявку<a href="#" class='title navigation__repair'></a>
-				Статус ремонта<a href="#" class="title navigation__chatstatus"></a>
-			</div>
+				<ul class='title__navigation'>
+					Оставить заявку<li class='navigation__repair'><a href="#"><img src="./image/repair.svg"></a></li>
+					Статус ремонта<li class="navigation__chatstatus"><a href="#"><img src="./image/chatstatus.svg"></a></li>
+				</ul>
 			</div>
 			<ul class="services">
 				<li><a href="#" class="services brand">Ремонтируемые бренды</a></li>
-				<li><a href="#" class='services repair'>Ремонтируемые устройства</a></li>
+				<li><a href="#" class='services repair current'>Ремонтируемые устройства</a></li>
 				<li><a href="#" class='services additional'>Дополнительные услуги</a></li>
 				<li><a href="#" class='services price'>Цены на услуги</a></li>
 				<li><a href="#" class="services adress">Адреса сервисных центров</a></li>
@@ -46,10 +46,10 @@
 
 				<p>Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</p>
 			</article>
-					<div>
-					<a class='read-more' href="#" title="Читать далее">
-					Читать далее</a>
-					</div>
+				<div>
+				<a class='read-more' href="#" title="Читать далее">
+				Читать далее</a>
+				</div>
 				<img class='photo' src="./image/_MG_3223.jpg" alt="photo">
 		</main>
 	</body>
